--- a/CalculatorTests/CalculatorTests.csproj
+++ b/CalculatorTests/CalculatorTests.csproj
@@ -47,6 +47,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="UnitTest1.cs" />
@@ -56,6 +57,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MortgageLibrary\MortgageLibrary.csproj">
+      <Project>{af73cc2a-6a0a-40d6-8fc8-cfb9c95b06fa}</Project>
+      <Name>MortgageLibrary</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Project4\Project4.csproj">
       <Project>{17288b63-6a7a-4ac7-b0c5-c0f13c142f36}</Project>
       <Name>Project4</Name>
