--- a/CalculatorTests/CalculatorTests.csproj
+++ b/CalculatorTests/CalculatorTests.csproj
@@ -50,10 +50,18 @@
     <Reference Include="System.Web" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="bin\Debug\Project4.dll.config" />
+    <None Include="obj\Debug\CalculatorTests.csproj.CopyComplete" />
+    <None Include="obj\Debug\CalculatorTests.csproj.CoreCompileInputs.cache" />
+    <None Include="obj\Debug\CalculatorTests.csprojAssemblyReference.cache" />
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +73,27 @@
       <Project>{17288b63-6a7a-4ac7-b0c5-c0f13c142f36}</Project>
       <Name>Project4</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="bin\Debug\CalculatorTests.dll" />
+    <Content Include="bin\Debug\CalculatorTests.pdb" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.MSTest.TestAdapter.dll" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.MSTestAdapter.PlatformServices.dll" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.MSTestAdapter.PlatformServices.Interface.dll" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.TestFramework.dll" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.xml" />
+    <Content Include="bin\Debug\Microsoft.VisualStudio.TestPlatform.TestFramework.xml" />
+    <Content Include="bin\Debug\MortgageLibrary.dll" />
+    <Content Include="bin\Debug\MortgageLibrary.pdb" />
+    <Content Include="bin\Debug\Project4.dll" />
+    <Content Include="bin\Debug\Project4.pdb" />
+    <Content Include="obj\Debug\CalculatorTests.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\CalculatorTests.dll" />
+    <Content Include="obj\Debug\CalculatorTests.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
